@@ -13,6 +13,7 @@
         Add GFunctions abstract base class (#3328)
         Add GIntegrals class (#3328)
         Remove implicit conversion warnings (#3324)
+        Add gammalib::tmpnam() function (#3324)
         Implement vectorised response computation (#3203)
         Implement analytical gradients for the radial Gaussian model in a
           stacked analysis (#3203)
